--- a/phase01_build-to-spec/spec.html
+++ b/phase01_build-to-spec/spec.html
@@ -9,46 +9,50 @@
 </head>
 
 <body>
-    <div id="grid">
-        <header>
-            <div id="projecttitle">
-                The Home of Liz Andrade
-            </div>
-            <div id="dates">
-                Fall, current year
-            </div>
-
-        </header>
+    <div class="grid_container">
         <main>
-            <article>
-                <div id="articletitle">
-                    There's something in the woods!
-                </div>
-                <div id="articlesubtitle">
-                    But what could it be? Mystery abounds!<br>
-                    Such questions and intrigue!<br>
-                    Read more to find out...more?<br>
-                </div>
-                <div id="maintext">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                    Ut animi vitae commodi corporis!<br>
-                    Soluta molestiae consectetur consequatur vel!<br>
-                    Nihil nostrum velit sapiente quis, earum pariatur<br>
-                    iste perspiciatis necessitatibus aspernatur expedita.
-                    <br><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                    Ut animi vitae commodi corporis!<br>
-                    Soluta molestiae consectetur consequatur vel!<br>
-                    Nihil nostrum velit sapiente quis, earum pariatur<br>
-                    iste perspiciatis necessitatibus aspernatur expedita.
-                    <br><br>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                    Ut animi vitae commodi corporis!<br>
-                    Soluta molestiae consectetur consequatur vel!<br>
-                    Nihil nostrum velit sapiente quis, earum pariatur<br>
-                    iste perspiciatis necessitatibus aspernatur expedita.
-                </div>
-            </article>
+            <span id="title">
+                The Home of Liz Andrade
+            </span>
+            <span id="date">
+                Fall, current year
+            </span>
+            <span id="content_main">
+                <article>
+                    <span id="heading">
+                        There's something in the woods!
+                    </span>
+                    <span id="subheading">
+                        But what could it be? Mystery abounds!<br>
+                        Such questions and intrigue!<br>
+                        Read more to find out...more?<br>
+                    </span>
+                    <span id="text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                        Ut animi vitae commodi corporis!<br>
+                        Soluta molestiae consectetur consequatur vel!<br>
+                        Nihil nostrum velit sapiente quis, earum pariatur<br>
+                        iste perspiciatis necessitatibus aspernatur expedita.
+                        <br><br>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                        Ut animi vitae commodi corporis!<br>
+                        Soluta molestiae consectetur consequatur vel!<br>
+                        Nihil nostrum velit sapiente quis, earum pariatur<br>
+                        iste perspiciatis necessitatibus aspernatur expedita.
+                        <br><br>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                        Ut animi vitae commodi corporis!<br>
+                        Soluta molestiae consectetur consequatur vel!<br>
+                        Nihil nostrum velit sapiente quis, earum pariatur<br>
+                        iste perspiciatis necessitatibus aspernatur expedita.
+                    </span>
+                </article>
+            </span>
+            <span id = "content_media">
+                <span id = "photo1">
+                    <p>Image here</p>
+                </span>
+            </span>
         </main>
     </div>
 </body>
