Outlined sections + changed placeholder color
Named/outlined a skeleton for every section and defined their grid-area (using span for column/row end, specified column/row start)

Changed placeholder HTML color code background-color of sections to rgb grayscale values.

Made the 5th grid column slightly bigger.

--- a/phase01_build-to-spec/spec.html
+++ b/phase01_build-to-spec/spec.html
@@ -47,10 +47,26 @@
                 </span>
             </article>
         </span>
-        <span id = "content_media">
-            <span id = "photo1">
-                <p>Image here</p>
-            </span>
+        <span id="content_media">
+
+        </span>
+        <span id="photo1">
+            Photo1
+        </span>
+        <span id="caption1">
+            Uh hello I'm caption 1
+        </span>
+        <span id="caption2">
+            And I'm caption2!
+        </span>
+        <span id="photo2">
+            Photo2
+        </span>
+        <span id = "photo3">
+            Photo3 (this one has text)
+        </span>
+        <span id = "photo4">
+            Photo4 (this one goes into the empty space)
         </span>
     </div>
 </body>
