--- a/phase01_build-to-spec/spec.html
+++ b/phase01_build-to-spec/spec.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THOLA Homepage</title>
+    
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -19,12 +19,12 @@
         <span id="content_main">
             <article>
                 <span id="heading">
-                    There's something in the woods!
+                    <h1>There's something in the woods!</h1>
                 </span>
                 <span id="subheading">
-                    But what could it be? Mystery abounds!<br>
-                    Such questions and intrigue!<br>
-                    Read more to find out...more?<br>
+                    <h3>But what could it be? Mystery abounds!
+                    Such questions and intrigue!
+                    Read more to find out...more?</h3>
                 </span>
                 <span id="text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
