Added images to spec.html
Replaced placeholder "Photo_" text with actually project-relevant assets.

--- a/phase01_build-to-spec/spec.html
+++ b/phase01_build-to-spec/spec.html
@@ -67,24 +67,26 @@
 
         </span>
         <span id="photo1">
-            Photo1
+            <img src = "media/rui.png" alt="Rui Andrade" height = 100%>
         </span>
         <span id="caption1">
-            Uh hello I'm caption 1
+            (Above): Rui Andrade, lifelong bunker occupant. Picture found
+            in Norville archives, submitted by an anonymous.
         </span>
         <span id="caption2">
-            And I'm caption2!
+            (Below): Marielle Andrade, recent bunker occupant. Picture
+            found in news coverage of dropped court case.
         </span>
         <span id="photo2">
-            Photo2
+            <img src = "media/marielle.png" alt="Marielle Andrade with a bloody nose" height = 100%>
         </span>
         <span id="photo3">
-            Photo3 (this one has text)
+            <img src = "media/liz.png" alt = "blurry photo of Liz Andrade in the forest" height =100%>
+
         </span>
         <span id="photo4">
-            Photo4 (this one goes into the empty space)
+            <img src = "media/house.png" alt = "Andrade bunker" height = 100%>
         </span>
     </div>
 </body>
-
 </html>
