--- a/phase01_build-to-spec/spec.html
+++ b/phase01_build-to-spec/spec.html
@@ -22,44 +22,41 @@
                     <h1>"ABANDONED" BUNKER TURNS OUT TO BE FAMILY HOME</h1>
                 </span>
                 <span id="subheading">
-                    <h3>What was thought to be an abandoned nuclear shelter  turns out to be the family home of 
+                    <h3>What was thought to be an abandoned nuclear shelter turns out to be the family home of
                         the ANDRADE family.</h3>
                 </span>
                 <span id="text">
-                    Mr. & Mrs. Andrade (names and ages unknown) 
-                    moved to the property, where they then had a litter 
-                    of two (Rui Andrade, male, 8; Marielle Andrade, 
-                    female, 8 years old). The couple raised their litter through 
-                    young adulthood while on the property, when the daughter 
-                    seems to have moved out. Rui remained 
-                    on the property after the death of the 
-                    original homeowners as the bunker’s sole occupant.
-                    <br><br>
-                    Before moving back onto the property, 
-                    Marielle Andrade allegedly attempted to bring criminal 
-                    charges against her ex-partner before the case was dropped. 
-                    The alleged charges include: Domestic and Economic Abuse, 
-                    Assault and Battery, Improper Disclosure of Medical Records, 
-                    Medical Fraud Conspiracy, and Wrongful Death of a Newborn. 
-                    Prosecution was not able to prove intent or liability 
-                    on the part of the defendant, leading to the court 
-                    dropping the case.
-                    <br>Marielle Andrade moved back to the bunker 
-                    this summer. Shortly after, she adopted an abandoned 
-                    kitten (Liz Andrade, female, less than 1yrs), bringing the 
-                    property’s total occupants to 3 cats. Currently, she 
-                    and her brother are raising the child. Local 
-                    pediatrician Marcos Oliviera (male, 6yrs), 
-                    the cat who informed local government of the 
-                    property’s status, seemed concerned about the 
-                    health and wellbeing of the child. 
-                    <br>
-                    “[The sore on her face] looked like juvenile FIV. 
-                    And there’s no way she’s being given proper 
-                    treatment out there, there are no doctors 
-                    in the woods.”
-                    
-                    
+                    <p>
+                        Mr. & Mrs. Andrade (names and ages unknown)
+                        moved to the property, where they then had a litter
+                        of two (Rui Andrade, male, 8; Marielle Andrade,
+                        female, 8 years old). The couple raised their litter through
+                        young adulthood while on the property, when the daughter
+                        seems to have moved out. Rui remained
+                        on the property after the death of the
+                        original homeowners as the bunker’s sole occupant.
+                    </p>
+                    <p>Before moving back onto the property,
+                        Marielle Andrade allegedly attempted to bring criminal
+                        charges against her ex-partner before the case was dropped.
+                        The alleged charges include: Domestic and Economic Abuse,
+                        Assault and Battery, Improper Disclosure of Medical Records,
+                        Medical Fraud Conspiracy, and Wrongful Death of a Newborn.
+                        Prosecution was not able to prove intent or liability
+                        on the part of the defendant, leading to the court
+                        dropping the case.</p>
+
+                    <p>Marielle Andrade moved back to the bunker
+                        this summer. Shortly after, she adopted an abandoned
+                        kitten (Liz Andrade, female, less than 1yrs), bringing the
+                        property’s total occupants to 3 cats.  Local
+                        pediatrician Marcos Oliviera (male, 6yrs),
+                        the cat who informed local government of the
+                        property’s status, seemed concerned about the
+                        health and wellbeing of the child.
+                    </p>
+
+
                 </span>
             </article>
         </span>
@@ -67,7 +64,7 @@
 
         </span>
         <span id="photo1">
-            <img src = "media/rui.png" alt="Rui Andrade" height = 100%>
+            <img src="media/rui.png" alt="Rui Andrade" height=100%>
         </span>
         <span id="caption1">
             (Above): Rui Andrade, lifelong bunker occupant. Picture found
@@ -78,15 +75,16 @@
             found in news coverage of dropped court case.
         </span>
         <span id="photo2">
-            <img src = "media/marielle.png" alt="Marielle Andrade with a bloody nose" height = 100%>
+            <img src="media/marielle.png" alt="Marielle Andrade with a bloody nose" height=100%>
         </span>
         <span id="photo3">
-            <img src = "media/liz.png" alt = "blurry photo of Liz Andrade in the forest" height =100%>
+            <img src="media/liz.png" alt="blurry photo of Liz Andrade in the forest" height=100%>
 
         </span>
         <span id="photo4">
-            <img src = "media/house.png" alt = "Andrade bunker" height = 100%>
+            <img src="media/house.png" alt="Andrade bunker" height=100%>
         </span>
     </div>
 </body>
+
 </html>
