Added/implemented logo image
Added logo to media folder.

Replaced title text with image. Alt text says the same thing so screen readers should be good.

--- a/phase01_build-to-spec/spec.html
+++ b/phase01_build-to-spec/spec.html
@@ -11,7 +11,7 @@
 <body>
     <div class="grid_container">
         <span id="title">
-            The Home of Liz Andrade
+            <img src="media/thola.png" alt="The home of Liz Andrade" height=100%>
         </span>
         <span id="date">
             Fall Equinox, Current Year
@@ -49,7 +49,7 @@
                     <p>Marielle Andrade moved back to the bunker
                         this summer. Shortly after, she adopted an abandoned
                         kitten (Liz Andrade, female, less than 1yrs), bringing the
-                        property’s total occupants to 3 cats.  Local
+                        property’s total occupants to 3 cats. Local
                         pediatrician Marcos Oliviera (male, 6yrs),
                         the cat who informed local government of the
                         property’s status, seemed concerned about the
