Text edits + formatting
Did minor changes to text in spec.html for space.

Began formatting/styling text in style.css, changed some un-tinted gray colors to tinted ones.

--- a/phase01_build-to-spec/spec.html
+++ b/phase01_build-to-spec/spec.html
@@ -67,12 +67,12 @@
             <img src="media/rui.png" alt="Rui Andrade" height=100%>
         </span>
         <span id="caption1">
-            (Above): Rui Andrade, lifelong bunker occupant. Picture found
-            in Norville archives, submitted by an anonymous.
+            (Above): Rui Andrade, lifelong occupant. Picture found
+            in Norville archives.
         </span>
         <span id="caption2">
-            (Below): Marielle Andrade, recent bunker occupant. Picture
-            found in news coverage of dropped court case.
+            (Below): Marielle Andrade, recent occupant. Picture
+            from dropped court case.
         </span>
         <span id="photo2">
             <img src="media/marielle.png" alt="Marielle Andrade with a bloody nose" height=100%>
@@ -82,7 +82,7 @@
 
         </span>
         <span id="photo4">
-            <img src="media/house.png" alt="Andrade bunker" height=100%>
+            <img src="media/house.png" alt="Andrade bunker" width=95%>
         </span>
     </div>
 </body>
