Added navbar + color edits
Added navbar, as well as an additional row in the grid to accommodate it.

Changed some of the rgb values.

Added a footer so the bottom wouldn't cut off.

Took away universal selector bc it was adding all this filler text but now my padding is a little wonky. Such is life.

--- a/phase01_build-to-spec/spec.html
+++ b/phase01_build-to-spec/spec.html
@@ -16,6 +16,12 @@
         <span id="date">
             Fall Equinox, Current Year
         </span>
+        <nav id ="navbar">
+            <a href = "https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">DeviantArt</a>
+            <a href = "https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">Totally not also DeviantArt</a>
+            <a href = "https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">Girl how many links do you think i have</a>
+            <a href = "https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">Llama 4 llama :3</a>
+        </nav>
         <span id="content_main">
             <article>
                 <span id="heading">
@@ -85,6 +91,9 @@
             <img src="media/house.png" alt="Andrade bunker" width=95%>
         </span>
     </div>
+    <footer>
+        ALL RIGHTS RESERVED MY NAME IS PEARL AND I AM AWESOME
+    </footer>
 </body>
 
 </html>
