Added * back + touch-ups
Added * back in to fix formatting.

Touched up line organization, basically I spammed "format document" until it stopped doing stuff.

--- a/phase01_build-to-spec/spec.html
+++ b/phase01_build-to-spec/spec.html
@@ -17,11 +17,14 @@
         <span id="date">
             Fall Equinox, Current Year
         </span>
-        <nav id ="navbar">
-            <a href = "https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">DeviantArt</a>
-            <a href = "https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">Totally not also DeviantArt</a>
-            <a href = "https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">Girl how many links do you think i have</a>
-            <a href = "https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">Llama 4 llama :3</a>
+        <nav id="navbar">
+            <a href="https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">DeviantArt</a>
+            <a href="https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">Totally not also
+                DeviantArt</a>
+            <a href="https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">Girl how many
+                links do you think i have</a>
+            <a href="https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">Llama 4 llama
+                :3</a>
         </nav>
         <span id="content_main">
             <article>
@@ -94,7 +97,9 @@
     </div>
     <footer>
         ALL RIGHTS RESERVED MY NAME IS PEARL AND I AM AWESOME
+        <br>
     </footer>
+
 </body>
 
 </html>
