--- a/phase01_version02/spec.html
+++ b/phase01_version02/spec.html
@@ -16,10 +16,10 @@
                 The Home of Liz Andrade
             </span>
             <nav id="navbar">
-                <a href="https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">Section 1</a>
-                <a href="https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">Section 2</a>
-                <a href="https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">Section 3</a>
-                <a href="https://www.deviantart.com/pearlwatcher/gallery/88358125/the-home-of-liz-andrade">Section 4
+                <a href=#article01>Article 1</a>
+                <a href=#article02>Article 2</a>
+                <a href=#article03>Article 3</a>
+                <a href=#article04>Article 4
                 </a>
         </span>
     </header>
@@ -62,6 +62,15 @@
                     health and wellbeing of the child.
                 </p>
             </span>
+        </article>
+        <article id="article02">
+            Article 2
+        </article>
+        <article id="article03">
+            Article 3
+        </article>
+        <article id="article04">
+            Article 4
         </article>
     </main>
     <footer>
