Added outline for other three sections
Added three other "articles" on the page---basic character bios for the three main characters of the project.

--- a/phase01_version02/spec.html
+++ b/phase01_version02/spec.html
@@ -16,11 +16,10 @@
                 The Home of Liz Andrade
             </span>
             <nav id="navbar">
-                <a href=#article01>Article 1</a>
-                <a href=#article02>Article 2</a>
-                <a href=#article03>Article 3</a>
-                <a href=#article04>Article 4
-                </a>
+                <a href=#article01>Andrade Family Home</a>
+                <a href=#article02>Liz Andrade</a>
+                <a href=#article03>Marielle Andrade</a>
+                <a href=#article04>Rui Andrade</a>
         </span>
     </header>
     <main>
@@ -64,13 +63,40 @@
             </span>
         </article>
         <article id="article02">
-            Article 2
+            <span class="grid_container">
+                <h1 id="a02_title">
+                    Liz Andrade
+                </h1>
+                <ul id="a02_subheading" class="a_bio">
+                    <li>she/her</li>
+                    <li>AFAB | Intersex female | Genderqueer</li>
+                    <li>&lt;1 years old</li>
+                </ul>
+            </span>
         </article>
         <article id="article03">
-            Article 3
+            <span class="grid_container">
+                <h1 id="a03_title">
+                    Marielle Andrade
+                </h1>
+                <ul id="a03_subheading" class="a_bio">
+                    <li>she/her</li>
+                    <li>AFAB | Endosex female | Cisgender woman</li>
+                    <li>8 years old</li>
+                </ul>
+            </span>
         </article>
         <article id="article04">
-            Article 4
+            <span class="grid_container">
+                <h1 id="a04_title">
+                    Rui Andrade
+                </h1>
+                <ul id="a04_subheading" class="a_bio">
+                    <li>he/him</li>
+                    <li>AMAB | Endosex Male | Cisgender man</li>
+                    <li>11 years old</li>
+                </ul>
+            </span>
         </article>
     </main>
     <footer>
