--- a/version1.5/spec.html
+++ b/version1.5/spec.html
@@ -25,7 +25,7 @@
     <main>
         <article id="article01">
             <span class="grid_container">
-                <h1 id="a01_title">"ABANDONED" BUNKER TURNS OUT TO BE FAMILY HOME"</h1>
+                <h1 id="a01_title">FAMILY OF 3 FOUND IN BUNKER</h1>
                 <h2 id="a01_subheading">What was thought to be an abandoned nuclear shelter turns out to be the
                     family home of
                     the ANDRADE family.</h2>
@@ -62,9 +62,9 @@
                 </p>
             </span>
         </article>
-        <article id="article02">
+        <article id="article02"class ="a234">
             <span class="grid_container">
-                <h1 id="a02_title">
+                <h1 id="a02_title" class="a_bio">
                     Liz Andrade
                 </h1>
                 <ul id="a02_subheading" class="a_bio">
@@ -74,9 +74,9 @@
                 </ul>
             </span>
         </article>
-        <article id="article03">
+        <article id="article03" class ="a234">
             <span class="grid_container">
-                <h1 id="a03_title">
+                <h1 id="a03_title" class="a_bio">
                     Marielle Andrade
                 </h1>
                 <ul id="a03_subheading" class="a_bio">
@@ -86,9 +86,9 @@
                 </ul>
             </span>
         </article>
-        <article id="article04">
+        <article id="article04" class ="a234">
             <span class="grid_container">
-                <h1 id="a04_title">
+                <h1 id="a04_title" class="a_bio">
                     Rui Andrade
                 </h1>
                 <ul id="a04_subheading" class="a_bio">
