Updated media + Styling + Fonts
Changed filenames for bio images in media. Resaturated Marielle's image. Replaced Liz's image with a new one. Removed house.png

Added CSS for a bunch of Google Fonts. Implemented some of them into HTML. Rewrote class and ID tags, removed some and came up with some new ones.

--- a/version1.5/spec.html
+++ b/version1.5/spec.html
@@ -7,15 +7,20 @@
     <title>The Home of Liz Andrade</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="media/icon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Barriecito&family=Karla:wght@200..800&family=Lateef:wght@200;300;400;500;600;700;800&family=Young+Serif&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
         <span class="grid_container">
-            <span id="page_title">
+            <span id="page_title" class="karla-bold">
                 The Home of Liz Andrade
             </span>
-            <nav id="navbar">
+            <nav id="navbar" class="karla-regular">
                 <a href=#article01>Andrade Family Home</a>
                 <a href=#article02>Liz Andrade</a>
                 <a href=#article03>Marielle Andrade</a>
@@ -25,11 +30,12 @@
     <main>
         <article id="article01">
             <span class="grid_container">
-                <h1 id="a01_title">FAMILY OF 3 FOUND IN BUNKER</h1>
-                <h2 id="a01_subheading">What was thought to be an abandoned nuclear shelter turns out to be the
+                <h1 id="a01_title" class="young-serif-regular">FAMILY OF 3 FOUND IN BUNKER</h1>
+                <h2 id="a01_subheading" class="lateef-semibold">What was thought to be an abandoned nuclear shelter
+                    turns out to be the
                     family home of
                     the ANDRADE family.</h2>
-                <p id="a01_p1">
+                <p id="a01_p1" class="lateef-light">
                     Mr. & Mrs. Andrade (names and ages unknown)
                     moved to the property, where they then had a litter
                     of two (Rui Andrade, male, 8; Marielle Andrade,
@@ -39,8 +45,8 @@
                     on the property after the death of the
                     original homeowners as the bunker’s sole occupant.
                 </p>
-                <p id="a01_p2">
-                    Before moving back onto the property,
+                <p id="a01_p2" class="lateef-light">
+                    <b class="lateef-regular">Before</b> moving back onto the property,
                     Marielle Andrade allegedly attempted to bring criminal
                     charges against her ex-partner before the case was dropped.
                     The alleged charges include: Domestic and Economic Abuse,
@@ -50,7 +56,7 @@
                     on the part of the defendant, leading to the court
                     dropping the case.
                 </p>
-                <p id="a01_p3">
+                <p id="a01_p3" class="lateef-light">
                     Marielle Andrade moved back to the bunker
                     this summer. Shortly after, she adopted an abandoned
                     kitten (Liz Andrade, female, less than 1yrs), bringing the
@@ -62,45 +68,47 @@
                 </p>
             </span>
         </article>
-        <article id="article02"class ="a234">
+        <article id="article02">
             <span class="grid_container">
-                <h1 id="a02_title" class="a_bio">
+                <h1 class="a_title" class="young-serif-regular">
                     Liz Andrade
                 </h1>
-                <ul id="a02_subheading" class="a_bio">
+                <img src="media/bio_Liz.png" alt="Liz Andrade in the forest" id="img_Liz" class = "a_img">
+                <ul class="a_subheading" >
                     <li>she/her</li>
-                    <li>AFAB | Intersex female | Genderqueer</li>
+                    <li class="karla-regular">AFAB | Intersex female | Genderqueer</li>
                     <li>&lt;1 years old</li>
                 </ul>
+
             </span>
         </article>
-        <article id="article03" class ="a234">
+        <article id="article03">
             <span class="grid_container">
-                <h1 id="a03_title" class="a_bio">
+                <h1 class="a_title" class="young-serif-regular">
                     Marielle Andrade
                 </h1>
-                <ul id="a03_subheading" class="a_bio">
+                <ul class="a_subheading">
                     <li>she/her</li>
-                    <li>AFAB | Endosex female | Cisgender woman</li>
+                    <li class="karla-regular">AFAB | Endosex female | Cisgender woman</li>
                     <li>8 years old</li>
                 </ul>
             </span>
         </article>
-        <article id="article04" class ="a234">
+        <article id="article04">
             <span class="grid_container">
-                <h1 id="a04_title" class="a_bio">
+                <h1 class="a_title" class="young-serif-regular">
                     Rui Andrade
                 </h1>
-                <ul id="a04_subheading" class="a_bio">
+                <ul class="a_subheading">
                     <li>he/him</li>
-                    <li>AMAB | Endosex Male | Cisgender man</li>
+                    <li class="karla-regular">AMAB | Endosex Male | Cisgender man</li>
                     <li>11 years old</li>
                 </ul>
             </span>
         </article>
     </main>
     <footer>
-        <span id="grid_container">
+        <span id="grid_container" class="lateef-light">
             &copy; 2024 Pearl Walker<br>
             ALL RIGHTS RESERVED AND I AM AWESOME
         </span>
