--- a/version1.5/spec.html
+++ b/version1.5/spec.html
@@ -30,11 +30,16 @@
     <main>
         <article id="article01">
             <span class="grid_container">
-                <h1 id="a01_title" class="young-serif-regular">FAMILY OF 3 FOUND IN BUNKER</h1>
-                <h2 id="a01_subheading" class="lateef-semibold">What was thought to be an abandoned nuclear shelter
-                    turns out to be the
-                    family home of
-                    the ANDRADE family.</h2>
+                <h1 class="a_title" class="young-serif-regular">
+                    FAMILY OF 3 FOUND IN BUNKER
+                </h1>
+                <h2 class="a_subheading">
+                    <span class="lateef-semibold">
+                        What was thought to be an abandoned nuclear
+                        shelter turns out to be the
+                        family home of the ANDRADE family.
+                    </span>
+                </h2>
                 <p id="a01_p1" class="lateef-light">
                     Mr. & Mrs. Andrade (names and ages unknown)
                     moved to the property, where they then had a litter
@@ -70,39 +75,39 @@
         </article>
         <article id="article02">
             <span class="grid_container">
-                <h1 class="a_title" class="young-serif-regular">
-                    Liz Andrade
+                <h1 class="a_title">
+                    <span class="young-serif-regular">Liz Andrade</span>
                 </h1>
-                <img src="media/bio_Liz.png" alt="Liz Andrade in the forest" id="img_Liz" class = "a_img">
-                <ul class="a_subheading" >
-                    <li>she/her</li>
-                    <li class="karla-regular">AFAB | Intersex female | Genderqueer</li>
-                    <li>&lt;1 years old</li>
+                
+                <ul class="a_subheading" id="liz_bio">
+                    <li class="lateef-regular">she/her</li>
+                    <li class="karla-regular">AFAB<br>Intersex female<br>Genderqueer</li>
+                    <li class="lateef-regular">&lt;1 years old</li>
                 </ul>
 
             </span>
         </article>
         <article id="article03">
             <span class="grid_container">
-                <h1 class="a_title" class="young-serif-regular">
-                    Marielle Andrade
+                <h1 class="a_title">
+                    <span class="young-serif-regular">Marielle Andrade</span>
                 </h1>
-                <ul class="a_subheading">
-                    <li>she/her</li>
-                    <li class="karla-regular">AFAB | Endosex female | Cisgender woman</li>
-                    <li>8 years old</li>
+                <ul class="a_subheading" id="marielle_bio">
+                    <li class="lateef-regular">she/her</li>
+                    <li class="karla-regular">AFAB<br>Endosex female<br>Cisgender woman</li>
+                    <li class="lateef-regular">8 years old</li>
                 </ul>
             </span>
         </article>
         <article id="article04">
             <span class="grid_container">
-                <h1 class="a_title" class="young-serif-regular">
-                    Rui Andrade
+                <h1 class="a_title">
+                    <span class="young-serif-regular">Rui Andrade</span>
                 </h1>
-                <ul class="a_subheading">
-                    <li>he/him</li>
-                    <li class="karla-regular">AMAB | Endosex Male | Cisgender man</li>
-                    <li>11 years old</li>
+                <ul class="a_subheading" id="rui_bio">
+                    <li class="lateef-regular">he/him</li>
+                    <li class="karla-regular">AMAB<br>Endosex Male<br>Cisgender man</li>
+                    <li class="lateef-regular">11 years old</li>
                 </ul>
             </span>
         </article>
