Padding and Margins
Working on padding and margins for default layout

--- a/version1.5/spec.html
+++ b/version1.5/spec.html
@@ -30,10 +30,10 @@
     <main>
         <article id="article01">
             <span class="grid_container">
-                <h1 class="a_title" class="young-serif-regular">
+                <h1 id="a1_title" class="young-serif-regular">
                     FAMILY OF 3 FOUND IN BUNKER
                 </h1>
-                <h2 class="a_subheading">
+                <h2 id="a1_subheading">
                     <span class="lateef-semibold">
                         What was thought to be an abandoned nuclear
                         shelter turns out to be the
@@ -75,13 +75,10 @@
         </article>
         <article id="article02">
             <span class="grid_container">
-                <h1 class="a_title">
-                    <span class="young-serif-regular">Liz Andrade</span>
-                </h1>
-                
                 <ul class="a_subheading" id="liz_bio">
-                    <li class="lateef-regular">she/her</li>
-                    <li class="karla-regular">AFAB<br>Intersex female<br>Genderqueer</li>
+                    <h1 class="young-serif-regular">Liz Andrade</h1>
+                    
+                    <li class="karla-regular">AFAB (she/her)<br>Intersex female<br>Genderqueer</li>
                     <li class="lateef-regular">&lt;1 years old</li>
                 </ul>
 
@@ -89,24 +86,18 @@
         </article>
         <article id="article03">
             <span class="grid_container">
-                <h1 class="a_title">
-                    <span class="young-serif-regular">Marielle Andrade</span>
-                </h1>
                 <ul class="a_subheading" id="marielle_bio">
-                    <li class="lateef-regular">she/her</li>
-                    <li class="karla-regular">AFAB<br>Endosex female<br>Cisgender woman</li>
+                    <h1 class="young-serif-regular">Marielle Andrade</h1>
+                    <li class="karla-regular">AFAB (she/her)<br>Endosex female<br>Cisgender woman</li>
                     <li class="lateef-regular">8 years old</li>
                 </ul>
             </span>
         </article>
         <article id="article04">
             <span class="grid_container">
-                <h1 class="a_title">
-                    <span class="young-serif-regular">Rui Andrade</span>
-                </h1>
                 <ul class="a_subheading" id="rui_bio">
-                    <li class="lateef-regular">he/him</li>
-                    <li class="karla-regular">AMAB<br>Endosex Male<br>Cisgender man</li>
+                    <h1 class="young-serif-regular">Rui Andrade</h1>
+                    <li class="karla-regular">AMAB (he/him)<br>Endosex Male<br>Cisgender man</li>
                     <li class="lateef-regular">11 years old</li>
                 </ul>
             </span>
