Article01 span + tag changes
Added an empty span in Article 1 that will hold an image in desktop display.

Swapped some ID placement

--- a/version1.5/spec.html
+++ b/version1.5/spec.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <span class="grid_container">
+        <span id="section1" class="grid_container">
             <span id="page_title" class="karla-bold">
                 The Home of Liz Andrade
             </span>
@@ -28,11 +28,12 @@
         </span>
     </header>
     <main>
-        <article id="article01">
-            <span class="grid_container">
+        <article>
+            <span class="grid_container" id="article01">
                 <h1 id="a1_title" class="young-serif-regular">
-                    FAMILY OF 3 FOUND IN BUNKER
+                    FAMILY OF 3 FOUND LIVING IN RADIATION BUNKER
                 </h1>
+                <span id="a01_image"></span>
                 <h2 id="a1_subheading">
                     <span class="lateef-semibold">
                         What was thought to be an abandoned nuclear
@@ -71,13 +72,14 @@
                     property’s status, seemed concerned about the
                     health and wellbeing of the child.
                 </p>
+
             </span>
         </article>
         <article id="article02">
             <span class="grid_container">
                 <ul class="a_subheading" id="liz_bio">
                     <h1 class="young-serif-regular">Liz Andrade</h1>
-                    
+
                     <li class="karla-regular">AFAB (she/her)<br>Intersex female<br>Genderqueer</li>
                     <li class="lateef-regular">&lt;1 years old</li>
                 </ul>
