Added span + removed nonexistent ID tag
Added empty span for CSS :before pseudoclass

removed grid_container ID (it's a class)

--- a/version1.5/spec.html
+++ b/version1.5/spec.html
@@ -75,6 +75,7 @@
 
             </span>
         </article>
+        <span id="divide"></span>
         <article id="article02">
             <span class="grid_container">
                 <ul class="a_subheading" id="liz_bio">
@@ -106,7 +107,7 @@
         </article>
     </main>
     <footer>
-        <span id="grid_container" class="lateef-light">
+        <span class="karla-regular">
             &copy; 2024 Pearl Walker<br>
             ALL RIGHTS RESERVED AND I AM AWESOME
         </span>
